# .lexe

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FORMAT-0.1.md  HARDENING.md  TRUST.md
scripts/: build.cmd  build.sh
src/cli/: commands.cpp  commands.hpp  main.cpp
src/core/: crypto.cpp  crypto.hpp  desktop.cpp  desktop.hpp  error.hpp  http.cpp  http.hpp  installer.cpp  installer.hpp  launcher.cpp  launcher.hpp  manifest.cpp  manifest.hpp  package.cpp  package.hpp  paths.cpp  paths.hpp  registry.cpp  registry.hpp  updater.cpp  updater.hpp  util.cpp  util.hpp  verify.cpp  verify.hpp  versioncmp.cpp  versioncmp.hpp
src/gui/: main.cpp
tests/: helpers.hpp  test_cli.cpp  test_cli_e2e.cpp  test_crypto.cpp  test_desktop.cpp  test_gui.cpp  test_http.cpp  test_installer.cpp  test_launcher.cpp  test_main.cpp  test_manifest.cpp  test_package.cpp  test_paths.cpp  test_registry.cpp  test_updater.cpp  test_util.cpp  test_verify.cpp  test_versioncmp.cpp
